feat(SPRNT2-1): initial project skeleton with backend, frontend, ai-service, tests, docs, and tooling
- Set up monorepo structure with backend (Flask), frontend (Next.js), and ai-service directories
- Added Dockerfiles and docker-compose configs for all services
- Implemented initial backend and ai-service endpoints with test coverage (pytest, pytest-flask)
- Added frontend with Next.js, Jest, and Testing Library setup
- Created Makefile for common dev tasks (test, lint, format, build, clean, dev-up/down)
- Added requirements.txt and package.json for dependency management
- Configured pre-commit hooks for code formatting and linting (black, ruff, prettier, eslint)
- Provided initial documentation in docs/ (setup, workflow, development guide, project structure)
- Included scripts for dev environment setup and database initialization
- Ensured all services have basic test suites and CI-ready structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,97 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# IDE
+.vscode/
+.claude/
+.idea/
+*.swp
+*.swo
+*~
 
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# Testing
+coverage/
+.coverage
+htmlcov/
+*.cover
+.pytest_cache/
 
-# next.js
-/.next/
-/out/
+# Next.js
+.next/
+out/
+build/
+dist/
 
-# production
-/build
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+*.egg-info/
 
-# misc
-.DS_Store
-*.pem
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.env
 
-# debug
+# Database
+*.db
+*.sqlite
+mongo_data/
+data/vector_db/
+
+# Logs
+*.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
+# OS
+.DS_Store
+Thumbs.db
+*.pem
 
-# vercel
-.vercel
+# Docker
+docker-compose.override.yml
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Vercel
+.vercel
+
+# CI/CD
+.secrets.baseline
+*.sarif
+safety-*.json
+audit-*.json
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Security
+*.key
+*.crt
+.gitguardian/
+
+# Misc
+*.bak
+.cache/
+temp/
+*.tmp
+*.backup
